yaml/cakephp-dc.yaml
kind: DeploymentConfig
apiVersion: apps.openshift.io/v1
metadata:
  annotations:
    description: Defines how to deploy the application server
    template.alpha.openshift.io/wait-for-ready: 'true'
  name: cakephp-mysql-persistent
  labels:
    app: cakephp-mysql-persistent
    template: cakephp-mysql-persistent
spec:
  strategy:
    type: Recreate
    recreateParams:
      timeoutSeconds: 600
      pre:
        failurePolicy: Retry
        execNewPod:
          command:
            - ./migrate-database.sh
          containerName: cakephp-mysql-persistent
    resources: {}
    activeDeadlineSeconds: 21600
  triggers:
    - type: ImageChange
      imageChangeParams:
        automatic: true
        containerNames:
          - cakephp-mysql-persistent
        from:
          kind: ImageStreamTag
          namespace: cakephp-gitops
          name: 'cakephp-mysql-persistent:latest'
    - type: ConfigChange
  replicas: 3
  revisionHistoryLimit: 10
  test: false
  selector:
    name: cakephp-mysql-persistent
  template:
    metadata:
      name: cakephp-mysql-persistent
      creationTimestamp: null
      labels:
        name: cakephp-mysql-persistent
    spec:
      containers:
        - resources:
            limits:
              memory: 512Mi
          readinessProbe:
            httpGet:
              path: /health.php
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 3
            timeoutSeconds: 3
            periodSeconds: 60
            successThreshold: 1
            failureThreshold: 3
          terminationMessagePath: /dev/termination-log
          name: cakephp-mysql-persistent
          livenessProbe:
            httpGet:
              path: /health.php
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 30
            timeoutSeconds: 3
            periodSeconds: 60
            successThreshold: 1
            failureThreshold: 3
          ports:
            - containerPort: 8080
              protocol: TCP
          imagePullPolicy: IfNotPresent
          terminationMessagePolicy: File
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      schedulerName: default-scheduler
