yaml/mysql-svc.yaml
kind: Service
apiVersion: v1
metadata:
  name: mysql
  labels:
    app: cakephp-mysql-persistent
    template: cakephp-mysql-persistent
  annotations:
    description: Exposes the database server
spec:
  ports:
    - name: mysql
      protocol: TCP
      port: 3306
      targetPort: 3306
  selector:
    name: mysql
  type: ClusterIP
  sessionAffinity: None
  ipFamilies:
    - IPv4
  ipFamilyPolicy: SingleStack
